--- a/public/locales/es/portfolio.json
+++ b/public/locales/es/portfolio.json
@@ -119,12 +119,24 @@
       "label": "figma"
     },
     {
+      "name": "Metabase",
+      "label": "metabase"
+    },
+    {
       "name": "Flutter",
       "label": "flutter"
     },
     {
       "name": "Mapbox",
       "label": "mapbox"
+    },
+    {
+      "name": "MedusaJs",
+      "label": "medusajs"
+    },
+    {
+      "name": "Mantine",
+      "label": "mantine"
     },
     {
       "name": "Thingsboard",
@@ -144,7 +156,7 @@
     },
     {
       "name": "ChakraUI",
-      "label": "chakra-ui"
+      "label": "chakraui"
     },
     {
       "name": "Python",
@@ -190,118 +202,118 @@
       "id": "teleus",
       "name": "Tele Us",
       "link": "tele-us",
-      "shortDescription": "Plataforma de imágenes médicas",
+      "tagline": "Plataforma de imágenes médicas",
       "description": "Plataforma Web Responsive de tecnología open source en el sector de imágenes médicas, específicamente imágenes ecográficas para los roles pacientes y doctores.",
       "client": "databioma",
       "program": "partners",
       "industry": "health-tech",
       "repository": "Privado",
       "services": ["graphic-design", "product-design", "web-development"],
-      "stack": []
+      "stack": ["react", "nextjs", "typescript", "go"]
     },
     {
       "id": "pachatec",
       "name": "Pachatec",
       "link": "pachatec",
-      "shortDescription": "Página web",
+      "tagline": "Página web",
       "description": "Diseño de Manual de Marca y web, Desarrollo Web personalizado (Landing Page con formularios de registro y tablas de precios de cultivos de la zona de San Martín, Perú).",
       "client": "inqube",
       "program": "partners",
       "industry": "agro-tech",
       "repository": "Privado",
       "services": ["graphic-design", "product-design", "web-development"],
-      "stack": []
+      "stack": ["figma", "react", "nextjs", "typescript"]
     },
     {
       "id": "nvi",
       "name": "Neo Vigilancia Integrada",
       "link": "neo-vigilancia-integrada",
-      "shortDescription": "Aplicación móvil",
+      "tagline": "Aplicación móvil",
       "description": "Aplicación Móvil para la recopilación de datos relacionados con el proyecto “Vigilancia Integrada” para la vigilancia entomológica de chirimachas (Triatoma infestans). Nos permite ver la información acerca del riesgo de infestación de cada casa en una zona dada y también permite ingresar los datos que recolectemos en campo, en la ciudad de Arequipa.",
       "client": "innovalab",
       "program": "academy",
       "industry": "health-tech",
       "repository": "Privado",
       "services": ["product-design", "mobile-development"],
-      "stack": []
+      "stack": ["go", "flutter"]
     },
     {
       "id": "loges",
       "name": "Loges",
       "link": "loges",
-      "shortDescription": "Plataforma logística",
+      "tagline": "Plataforma logística",
       "description": "Nuevo sistema logístico que integra el tracking de embarques, permite la visualización de datos de carga, aduana y Operlog. Cuenta con un sistema de reportes personalizados y se integra con una plataforma de Business Intelligence para la visualización de datos a través de dashboards.",
       "program": "partners",
       "client": "gammarcargo",
       "industry": "logistics",
       "repository": "Privado",
       "services": ["product-design", "web-development"],
-      "stack": []
+      "stack": ["figma", "typescript", "react", "nextjs", "mapbox", "mantine", "metabase"]
     },
     {
       "id": "redmop",
       "name": "Redmop",
       "link": "redmop",
-      "shortDescription": "Practical Action",
+      "tagline": "Practical Action",
       "description": "",
       "program": "partners",
       "client": "practicalaction",
       "industry": "ong",
       "repository": "Privado",
       "services": ["system-design", "iot-development", "research"],
-      "stack": []
+      "stack": ["thingsboard", "terraform"]
     },
     {
       "id": "qronica",
       "name": "Qronica",
       "link": "qronica",
-      "shortDescription": "Aplicación móvil",
+      "tagline": "Aplicación móvil",
       "description": "Plataforma de gestión y administración de recursos relacionados a estudios antropológicos.",
       "program": "partners",
       "client": "totemiq",
       "industry": "anthropology",
       "repository": "Privado",
       "services": ["system-design", "mobile-development", "research"],
-      "stack": []
+      "stack": ["react", "nextjs", "typescript", "flutter"]
     },
     {
       "id": "totemiq",
       "name": "Totemiq Experiences",
       "link": "totemiq-experiences",
-      "shortDescription": "Ecommerce",
+      "tagline": "Ecommerce",
       "description": "Plataforma de comercio electrónico de arte inspirado en la unión de la cultura viva peruana y el arte contemporáneo. Permite la compra de experiencias a través de PayPal o Mercado Pago y cuenta con un panel administrativo para gestionar los productos y pedidos.",
       "program": "partners",
       "client": "totemiq",
       "industry": "tourism",
       "repository": "Privado",
       "services": ["product-design", "web-development"],
-      "stack": []
+      "stack": ["react", "nextjs", "typescript", "medusajs", "mantine"]
     },
     {
       "id": "vaxcanina",
       "name": "Vax Canina",
       "link": "vax-canina",
-      "shortDescription": "Aplicación móvil",
+      "tagline": "Aplicación móvil",
       "description": "Aplicativo móvil que incluye el ingreso de datos con captura de datos espacial de puntos fijos que sirva para captar las direcciones rápidamente de la gente que se acerca para vacunar a sus perros y el rastreo de los vacunadores puerta a puerta, con seguimiento de rutas.",
       "program": "academy",
       "client": "innovalab",
       "industry": "health-tech",
       "repository": "Privado",
       "services": ["product-design", "web-development", "mobile-development", "research"],
-      "stack": []
+      "stack": ["react", "nextjs", "typescript", "go", "flutter", "chakraui"]
     },
     {
       "id": "workdyst",
       "name": "Workdyst",
       "link": "workdyst",
-      "shortDescription": "Aplicación móvil",
+      "tagline": "Aplicación móvil",
       "description": "Plataforma de Comunicación para facilitar el trabajo en campo, mediante la Gestión a tiempo real de la información de los proyectos y la potenciación de la colaboración de los trabajadores.",
       "program": "partners",
       "client": "clv",
       "industry": "software",
       "repository": "Privado",
       "services": ["vr-development"],
-      "stack": []
+      "stack": ["flutter"]
     }
   ]
 }
