feat: add whatsapp link

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -136,7 +136,7 @@
     "title": "Contact information",
     "fields": {
       "email": "Email",
-      "phone": "Phone",
+      "whatsapp": "Whatsapp",
       "address": "Address",
       "hours": "Working Hours"
     }
