--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -135,7 +135,7 @@
     "title": "Información de contacto",
     "fields": {
       "email": "Correo",
-      "phone": "Teléfono",
+      "whatsapp": "Whatsapp",
       "address": "Dirección",
       "hours": "Horario de trabajo"
     }
