feat: quote button

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -182,7 +182,7 @@
   "clientsTitle": "Our clients",
   "schedule": {
     "title": "Request a quote",
-    "button": "Schedule meeting"
+    "button": "Request a Quote Now!"
   },
   "footerInformation": {
     "brandTrademark": "🇵🇪 2022 Minsky S.A.C.",
