--- a/public/locales/es/home.json
+++ b/public/locales/es/home.json
@@ -181,7 +181,7 @@
   "clientsTitle": "Nuestros clientes",
   "schedule": {
     "title": "Cotiza con nosotros",
-    "button": "Agenda una reunión"
+    "button": "¡Cotiza Ahora!"
   },
   "footerInformation": {
     "brandTrademark": "🇵🇪 2022 Minsky S.A.C.",
