--- a/public/locales/es/services.json
+++ b/public/locales/es/services.json
@@ -1,21 +1,58 @@
 {
   "landingPage": {
+    "headline": "Desarrollo de páginas web",
+    "description": "Toma el control de tu presencia en línea sin depender de las redes sociales y sus algoritmos. Lleva tu negocio al siguiente nivel con una página moderna, segura y personalizada.",
+    "button": "¡Cotiza Ahora!",
+    "differencesTitle": "Lo que nos diferencia:",
+    "differences": [
+      {
+        "icon": "palette",
+        "title": "Diseño Personalizado",
+        "description": "Cada página web que creamos es única y está diseñada específicamente para reflejar la identidad y los valores de tu marca."
+      },
+      {
+        "icon": "lock",
+        "title": "Seguridad Integral",
+        "description": "Implementamos medidas de seguridad robustas para proteger tu sitio web y la información de tus clientes contra amenazas cibernéticas."
+      },
+      {
+        "icon": "user",
+        "title": "Experiencia de Usuario Intuitiva",
+        "description": "Diseñamos interfaces intuitivas y navegación fluida para que tus visitantes encuentren fácilmente lo que están buscando y disfruten de una experiencia sin problemas en tu sitio web."
+      },
+      {
+        "icon": "device",
+        "title": "Diseño responsive",
+        "description": "Optimizamos todas nuestras páginas web para dispositivos móviles, garantizando una experiencia consistente y satisfactoria en smartphones y tablets."
+      },
+      {
+        "icon": "affiliate",
+        "title": "Gestión de Contenidos",
+        "description": "Tú tienes el control total sobre la información en tu página web. Mantén tu sitio web siempre actualizado y relevante para tus visitantes con solo unos pocos clics."
+      },
+      {
+        "icon": "headset",
+        "title": "Soporte Continuo",
+        "description": "Ofrecemos soporte continuo para ayudarte con cualquier pregunta, problema técnico o actualización que puedas necesitar en el futuro."
+      }
+    ],
+    "faqsTitle": "¿Por qué tener tu propia página web?",
     "faqs": [
       {
-        "question": "Independencia de las Redes Sociales",
-        "answer": "Al tener un landing page, no estás sujeto a los cambios de algoritmos o caídas de servicios de las redes sociales, lo que te brinda estabilidad y control sobre tu presencia en línea."
+        "title": "Independencia de las Redes Sociales",
+        "description": "En las redes sociales, tus publicaciones y contenido están sujetos a las políticas y algoritmos de la plataforma, lo que significa que pueden cambiar cómo y cuándo se muestra tu contenido sin previo aviso. Con tu propia página web, tú tienes el control total sobre tu contenido y cómo se presenta a tu audiencia."
       },
       {
-        "question": "Control de la Data de Tus Clientes",
-        "answer": "Con un landing page, tienes la capacidad de recolectar y gestionar la información de tus clientes de manera directa y segura. Esto te permite personalizar tus estrategias de marketing y mejorar la experiencia del cliente."
+        "title": "Control de los Datos de Tus Clientes",
+        "description": "Administrar tu propia página web te permite establecer tus propias políticas de privacidad y seguridad, lo que es crucial para proteger la información sensible de tus clientes."
       },
       {
-        "question": "Percepción de Seriedad y Modernidad",
-        "answer": "Los negocios que cuentan con un sitio web dedicado, como un landing page, transmiten una imagen de profesionalismo, seriedad y modernidad. Esto genera confianza en tus clientes y demuestra tu compromiso con tu negocio y tu audiencia."
+        "title": "Credibilidad, Seriedad y Modernidad",
+        "description": "Una página web bien diseñada transmite seriedad y compromiso con tu proyecto o negocio, algo que los perfiles en redes sociales no pueden igualar en términos de profesionalismo y credibilidad."
       },
       {
-        "question": "Personalización y Flexibilidad Total",
-        "answer": "Al optar por un desarrollo de software a medida o una página web creada por nosotros, tienes la libertad de personalizar cada aspecto según tus necesidades específicas. A diferencia de las plantillas predefinidas de WordPress u otros sistemas similares, donde estás limitado por las funcionalidades prediseñadas, podemos construir una solución completamente adaptada a tus requerimientos comerciales, procesos internos y objetivos de crecimiento."
+        "title": "Personalización y Flexibilidad Total",
+        "description": "Una página web propia te permite crear una experiencia completamente única y diferenciada que puede destacar en tu sector."
       }
     ]
   }
